--- a/common/css/style_sp.css
+++ b/common/css/style_sp.css
@@ -23,7 +23,7 @@
 
     a {
         text-decoration: none;
-        color: #333333;
+        color: #fff;
     }
 
     a:hover {
@@ -75,7 +75,10 @@
     video {
         max-width: 100%;
     }
-
+/*Menu*/
+    .Menuarea {
+        width: 90%;
+    }
 
     .menulist {
         padding: 0;
@@ -181,5 +184,60 @@
         .menulist {
             padding: 0;
         }
+    }
+
+    /*footer_accordion*/
+    /*ベース*/
+    .toggle {
+        display: none;
+    }
+
+    .Label {
+        /*タイトル*/
+        padding: 5px;
+        display: block;
+        color: #fff;
+
+    }
+
+    .Label::before {
+        /*タイトル横の矢印*/
+        content: "";
+        width: 6px;
+        height: 6px;
+        border-top: 2px solid #fff;
+        border-right: 2px solid #fff;
+        -webkit-transform: rotate(45deg);
+        position: absolute;
+        top: calc(50% - 3px);
+        right: 20px;
+        transform: rotate(135deg);
+    }
+
+    .Label,
+    .content {
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        transform: translateZ(0);
+        transition: all 0.3s;
+    }
+
+    .content {
+        /*本文*/
+        height: 0;
+        margin-bottom: 5px;
+        padding: 0 20px;
+        overflow: hidden;
+    }
+
+    .toggle:checked+.Label+.content {
+        /*開閉時*/
+        height: auto;
+        padding: 20px;
+        transition: all .3s;
+    }
+
+    .toggle:checked+.Label::before {
+        transform: rotate(-45deg) !important;
     }
 }
