--- a/common/css/style.css
+++ b/common/css/style.css
@@ -186,46 +186,63 @@
 
     /*footer_accordion*/
     /*ベース*/
-.toggle {
-	display: none;
-}
-.Label {		/*タイトル*/
-	padding: 5px;
-	display: block;
-	color: #fff;
+    .toggle {
+        display: none;
+    }
 
-}
-.Label::before{		/*タイトル横の矢印*/
-	content:"";
-	width: 6px;
-	height: 6px;
-	border-top: 2px solid #fff;
-	border-right: 2px solid #fff;
-	-webkit-transform: rotate(45deg);
-	position: absolute;
-	top:calc( 50% - 3px );
-	right: 20px;
-	transform: rotate(135deg);
-}
-.Label,
-.content {
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-	transform: translateZ(0);
-	transition: all 0.3s;
-}
-.content {		/*本文*/
-	height: 0;
-	margin-bottom:5px;
-	padding:0 20px;
-	overflow: hidden;
-}
-.toggle:checked + .Label + .content {	/*開閉時*/
-	height: auto;
-	padding:20px ;
-	transition: all .3s;
-}
-.toggle:checked + .Label::before {
-	transform: rotate(-45deg) !important;
-}
+    .Label {
+        /*タイトル*/
+        padding: 5px;
+        display: block;
+        color: #fff;
+
+    }
+
+    .Label::before {
+        /*タイトル横の矢印*/
+        content: "";
+        width: 6px;
+        height: 6px;
+        border-top: 2px solid #fff;
+        border-right: 2px solid #fff;
+        -webkit-transform: rotate(45deg);
+        position: absolute;
+        top: calc(50% - 3px);
+        right: 20px;
+        transform: rotate(135deg);
+    }
+
+    .Label,
+    .content {
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        transform: translateZ(0);
+        transition: all 0.3s;
+    }
+
+    .content {
+        /*本文*/
+        height: 0;
+        margin-bottom: 5px;
+        padding: 0 20px;
+        overflow: hidden;
+    }
+
+    .toggle:checked+.Label+.content {
+        /*開閉時*/
+        height: auto;
+        padding: 20px;
+        transition: all .3s;
+    }
+
+    .toggle:checked+.Label::before {
+        transform: rotate(-45deg) !important;
+    }
+
+    .snsarea {
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        column-gap: 20px;
+    }
 }
