--- a/common/css/contact.css
+++ b/common/css/contact.css
@@ -14,11 +14,38 @@
     border: 3px solid #778899;
     padding: 5px 35px;
     text-align: center;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #778899;
+
 }
 
-.step_block p {
-    font-size: 18px;
+.step_block::after {
+    position: absolute;
+    content: "\e5df";
+    font-family: "Material Icons";
+    transform: translate(0px, -50%);
+    font-size: 32px;
     color: #778899;
+    top: 50%;
+    left: 101%;
+}
+
+.step_block:last-child:after {
+    display: none;
+}
+
+.step1 {
+    background-color: #778899;
+    color: #fff;
+}
+
+/*active時の色*/
+.step_block.active {
+    background-color: #778899;
+    color: #fff;
 
 }
 
@@ -49,6 +76,7 @@ dt {
     width: 200px;
     display: flex;
     column-gap: 10px;
+    align-items: center;
 }
 
 .textarea {
@@ -69,8 +97,8 @@ dt {
 }
 
 button {
-    width: 600px;
-    margin: 0 auto;
+    width: 550px;
+    margin: 50px auto;
     background-color: #778899;
     color: #fff;
     padding: 3px;
@@ -81,40 +109,67 @@ button {
     align-items: center;
     display: flex;
     justify-content: center;
+    font-size: 18px;
 }
 
 .submit_btn:hover {
     opacity: 0.7;
 }
 
-button p {
-    font-size: 18px;
+.btn_list {
+    display: flex;
+    margin-top: 50px;
 }
 
-button p::after {
-    content: url(../img/arrow_icon.png);
-    position: absolute;
-    right: 10%;
-    top: 23%;
+.contact_form {
+    display: block;
+    /* 初期表示: フォームは表示する */
 }
+
+.confirmation_screen {
+    display: none;
+    /* 初期表示: 確認画面は非表示にする */
+}
+
+.submit_screen {
+    text-align: center;
+    margin-top: 100px;
+    /* 初期表示: 確認画面は非表示にする */
+    display: none;
+
+}
+
 @media screen and (max-width: 767px) {
-    .step_block{
+    .step_block {
         width: 100px;
         height: auto;
         border: 3px solid #778899;
         padding: 5px 15px;
         text-align: center;
     }
+
     label {
         display: block;
     }
+
     input {
         width: 300px;
     }
+
     #textarea {
         width: 300px;
     }
+
     button {
         width: 300px;
+        margin: 20px auto;
+    }
+
+    .step_block {
+        font-size: 14px;
+    }
+
+    .btn_list {
+        display: block;
     }
 }
